workloads/new-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-api
spec:
  selector:
    app: new-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
